# nu_jackal_autonav

./: CMakeLists.txt  README.md  ideas.txt  package.xml  remote-jackal.sh
include/nu_jackal_autonav/: custom_planner.h  custom_planner.hpp
include/winter_project/: custom_planner.h
launch/: amcl.launch  amcl_demo.launch  description.launch  gmapping.launch  gmapping_demo.launch  ground_filter.launch  ground_plane.launch  ground_plane_WIP.launch  height_map_nodelet.launch  laser_scan_matcher.launch  laser_scan_operations.launch  map_server.launch  nu_jackal_autonav_startup.launch  odom_navigation.launch  odom_navigation_demo.launch  pointcloud_filter.launch  pointcloud_to_laserscan.launch  rosbagplayer.launch  simulate.launch  twist_mux.launch  view_gazebo.launch  view_model.launch  view_rviz.launch
launch/include/: amcl.launch  amcl_core.launch  core_amcl.launch  core_move_base.launch  gmapping.launch  move_base.launch
maps/: D110.yaml  D110_1.pgm  D110_2.pgm  D110_2.yaml  D110_3.pgm  D110_3.yaml  D110_4.pgm  D110_4.yaml  boxed_in.pgm  boxed_in.yaml  msr_openhouse.pgm  msr_openhouse.yaml  tutorial_map.pgm  tutorial_map.yaml  willens_atrium_1.pgm  willens_atrium_1.yaml  willens_atrium_2.pgm  willens_atrium_2.yaml
nu_setup/: README.MD  ros-start  ros.conf  setup.bash  velodyne_startup.launch
params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml  twist_mux_topics.yaml
params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
plugins/: custom_plugin.xml
rviz/: amcl.rviz  map.rviz  model.rviz  odom.rviz  view_model.rviz
src/: conical_filter.cpp  control.py  control_test.py  custom_planner.cpp  floor_finder.cpp  ground_plane.cpp  ground_plane_OBSOLETE.cpp  ground_plane_cheat.cpp  keyboard_control.cpp  pose2D_to_odometry.py
urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
urdf/accessories/: VLP-16.urdf.xacro
urdf/configs/: winter_project
