<?xml version="1.0"?>
<package>
  <name>nu_jackal_autonav</name>
  <version>0.0.0</version>
  <description>Autonomous Navigation Using Clearpath Jackal and ROS Navigation Stack</description>

  <maintainer email="njk@todo.todo">njk</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/njkaiser/nu_jackal_autonav</url>

  <author email="njk@todo.todo">Nate Kaiser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- THESE FIRST FEW ARE ADDITIONS FROM A SIMILAR PACKAGE, NOT SURE IF NEEDED -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>base_local_planner</build_depend>

  <!-- THESE FIRST FEW ARE ADDITIONS FROM A SIMILAR PACKAGE, NOT SURE IF NEEDED -->
  <run_depend>tf</run_depend>
 	<run_depend>costmap_2d</run_depend>
 	<run_depend>nav_core</run_depend>
 	<run_depend>pluginlib</run_depend>
 	<run_depend>eigen</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>base_local_planner</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nav_core plugin="${prefix}/plugins/custom_plugin.xml" />
  </export>

</package>
